// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`идет в сервис taksa с правильными опциями 1`] = `
Array [
  "http://taksa/method",
  Object {
    "body": "{\\"foo\\":\\"bar\\"}",
    "headers": Object {},
    "json": true,
    "query": Object {
      "mdb": "TEST_MDB",
      "uid": "TEST_UID",
      "version": "hound",
    },
    "type": "post",
  },
]
`;

exports[`можно расширить query 1`] = `
Object {
  "body": "{\\"foo\\":\\"bar\\"}",
  "headers": Object {},
  "json": true,
  "query": Object {
    "mdb": "TEST_MDB",
    "sync": "yes",
    "uid": "TEST_UID",
    "version": "hound",
  },
  "type": "post",
}
`;

exports[`параметр mobile 1`] = `
Array [
  "http://taksa/method",
  Object {
    "body": "{\\"foo\\":\\"bar\\",\\"mobile\\":true}",
    "headers": Object {},
    "json": true,
    "query": Object {
      "mdb": "TEST_MDB",
      "mobile": "yes",
      "uid": "TEST_UID",
      "version": "hound",
    },
    "type": "post",
  },
]
`;

exports[`режим поиска 1`] = `
Array [
  "http://taksa/method",
  Object {
    "body": "{\\"details\\":{\\"search-options\\":\\"wtf\\"}}",
    "headers": Object {},
    "json": true,
    "query": Object {
      "mdb": "TEST_MDB",
      "uid": "TEST_UID",
      "version": "search",
    },
    "type": "post",
  },
]
`;
